--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "react": "^19.2.0",
